[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Table.gd" type="Script" id=1]

[node name="Table" type="Node2D"]
script = ExtResource( 1 )

[node name="ChatInput" type="LineEdit" parent="."]
margin_left = 3.0
margin_top = 581.0
margin_right = 358.0
margin_bottom = 638.0
caret_blink = true

[node name="ChatDisplay" type="TextEdit" parent="."]
margin_top = 3.0
margin_right = 252.0
margin_bottom = 581.0
readonly = true

[node name="Leave" type="Button" parent="."]
margin_left = 253.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 148.0
text = "Leave Table"

[node name="PatronList" type="ItemList" parent="."]
margin_left = 250.0
margin_top = 147.0
margin_right = 359.0
margin_bottom = 580.0
[connection signal="visibility_changed" from="." to="." method="_on_Table_visibility_changed"]
[connection signal="button_up" from="Leave" to="." method="_on_Leave_button_up"]
